# currency-converter

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  mail.env.example  main.py  pyproject.toml
app/api/endpoints/: auth.py  currency.py  user.py
app/api/schemas/: auth.py  currency.py  exception.py  user.py
app/cache/: connect.py
app/client/: currency.py  google.py  yandex.py
app/core/: config.py  dependency.py
app/db/: connect.py  database.py  models.py
app/exceptions/: exceptions.py  handlers.py
app/migrations/: env.py
app/migrations/versions/: 0e5dc120ee8a_initial.py
app/repositories/: base_repository.py  currency_cache.py  jwt.py  user.py
app/services/: auth.py  currency.py  user.py
app/utils/: jwt_auth.py  unitofwork.py
currency_app/: Dockerfile  main.py
currency_app/api/endpoints/: auth.py  currency.py  health.py  user.py
currency_app/api/schemas/: auth.py  currency.py  mail.py
currency_app/broker/: admin.py  broker.py  kafka_broker.py
currency_app/cache/: connect.py
currency_app/client/: currency.py  google.py  yandex.py
currency_app/core/: config.py  dependency.py  security.py
currency_app/db/: connect.py  models.py
currency_app/exceptions/: exceptions.py  handlers.py
currency_app/migrations/: env.py
currency_app/repositories/: jwt.py  user.py
currency_app/services/: auth.py  currency.py  user.py
currency_app/utils/: jwt_auth.py  unitofwork.py
email_app/: Dockerfile  main.py
email_app/client/: mail.py
email_app/core/: config.py  dependency.py
email_app/routers/: mail.py
email_app/schemas/: mail.py
email_app/services/: mail.py
