[project]
name = "currency-converter"
version = "0.1.0"
description = ""
authors = [
    {name = "German Ivanov",email = "g02675695@yandex.ru"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "uvicorn (>=0.34.3,<0.35.0)",
    "pydantic-settings (>=2.9.1,<3.0.0)",
    "environs (>=14.2.0,<15.0.0)",
    "sqlalchemy (>=2.0.41,<3.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "alembic (>=1.16.1,<2.0.0)",
    "passlib (>=1.7.4,<2.0.0)",
    "pyjwt[crypto] (>=2.10.1,<3.0.0)",
    "aiohttp (>=3.12.11,<4.0.0)",
    "python-dateutil (>=2.9.0.post0,<3.0.0)",
    "redis (>=6.2.0,<7.0.0)",
    "gunicorn (>=23.0.0,<24.0.0)",
    "uvicorn-worker (>=0.3.0,<0.4.0)",
    "orjson (>=3.10.18,<4.0.0)",
    "faststream[cli,kafka] (>=0.5.42,<0.6.0)",
    "bcrypt (>=4.3.0,<5.0.0)",
    "aiosmtplib (>=4.0.1,<5.0.0)",
    "pydantic[email] (>=2.11.6,<3.0.0)",
    "pandas (>=2.3.0,<3.0.0)",
    "tenacity (>=9.1.2,<10.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
